--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -1,8 +1,22 @@
+// bootstrap
 @import "../../node_modules/bootstrap/scss/functions";
-@import './utils/variables';
+@import "./utils/variables";
+@import "../../node_modules/bootstrap/scss/mixins";
+
 @import "../../node_modules/bootstrap";
 
-@import './layout/header.scss';
-@import './layout/footer.scss';
+@import "./utils/utilities";
+@import "bootstrap/scss/utilities/api";
 
-@import './pages/index.scss';
+// customize - components
+@import "./components/navbar";
+
+// customize - utils
+@import "./utils/helpers";
+
+// customize - layout
+@import "./layout/header.scss";
+@import "./layout/footer.scss";
+
+// customize - pages
+@import "./pages/index.scss";
