新增：header 與 footer 樣式

--- a/layout/headerMember.ejs
+++ b/layout/headerMember.ejs
@@ -1,18 +1,24 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light flex-nowrap">
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
     <a class="navbar-brand" href="index.html">
       <img src="../assets/images/00_navBar_logo.svg" alt="職旅 Workway LOGO" />
     </a>
 
-    <button
-      type="button"
-      class="btn btn-lg btn-outline-natural-90 text-black fs-bm ms-auto order-lg-2"
+    <a
+      class="text-decoration-none order-lg-2 d-flex align-items-center ms-auto"
+      href="#"
     >
-      登入/註冊
-    </button>
+      <img
+        src="../assets/images/00_navBar_avatar.png"
+        alt="會員頭像"
+        class="rounded-circle border border-1 border-natural-85"
+        style="width: 44px; height: 44px"
+      />
+      <span class="text-black ms-2">Mokumaru</span>
+    </a>
 
     <button
-      class="navbar-toggler ms-3 border-0"
+      class="navbar-toggler border-0 ms-3"
       type="button"
       data-bs-toggle="collapse"
       data-bs-target="#navbarNav"
