--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -1,1 +1,24 @@
-<footer class="footer">footer</footer>
+<footer class="footer bg-natural-95">
+  <nav class="container py-6 py-lg-12">
+    <div
+      class="d-flex flex-column flex-lg-row justify-content-lg-between align-items-center"
+    >
+      <div class="nav justify-content-center">
+        <div class="d-flex">
+          <a href="service.html" class="nav-link fs-bm text-black">服務方案</a>
+          <a href="about.html" class="nav-link fs-bm text-black">關於職旅</a>
+          <a href="contact.html" class="nav-link fs-bm text-black">聯絡我們</a>
+        </div>
+        <div class="d-flex">
+          <a href="privacy.html" class="nav-link fs-bm text-black"
+            >隱私權政策</a
+          >
+          <a href="terms.html" class="nav-link fs-bm text-black">用戶條款</a>
+        </div>
+      </div>
+      <small class="fs-bs text-natural-50 text-center">
+        Copyright © 2025 職旅 workway. All rights reserved.
+      </small>
+    </div>
+  </nav>
+</footer>
