修改：補上邊線

--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -1,4 +1,4 @@
-<footer class="footer bg-natural-95">
+<footer class="footer bg-natural-95 border-top">
   <nav class="container py-6 py-lg-12">
     <div
       class="d-flex flex-column flex-lg-row justify-content-lg-between align-items-center"
