--- a/layout/header.ejs
+++ b/layout/header.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light flex-nowrap">
+<nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
   <div class="container">
     <a class="navbar-brand" href="index.html">
       <img src="../assets/images/00_navBar_logo.svg" alt="職旅 Workway LOGO" />
