--- a/layout/headerMember.ejs
+++ b/layout/headerMember.ejs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
   <div class="container">
     <a class="navbar-brand" href="index.html">
       <img src="../assets/images/00_navBar_logo.svg" alt="職旅 Workway LOGO" />
@@ -14,7 +14,7 @@
         class="rounded-circle border border-1 border-natural-85"
         style="width: 44px; height: 44px"
       />
-      <span class="text-black ms-2">Mokumaru</span>
+      <span class="text-black fw-medium ms-2">Mokumaru</span>
     </a>
 
     <button
