--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -3,7 +3,7 @@
     <div
       class="d-flex flex-column flex-lg-row justify-content-lg-between align-items-center"
     >
-      <div class="nav justify-content-center">
+      <div class="nav justify-content-center mb-2">
         <div class="d-flex">
           <a href="service.html" class="nav-link fs-bm text-black">服務方案</a>
           <a href="about.html" class="nav-link fs-bm text-black">關於職旅</a>
