--- a/layout/headerMember.ejs
+++ b/layout/headerMember.ejs
@@ -18,32 +18,45 @@
     </a>
 
     <button
-      class="navbar-toggler border-0 ms-3"
+      class="navbar-toggler ms-3"
       type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarNav"
-      aria-controls="navbarNav"
+      data-bs-toggle="offcanvas"
+      data-bs-target="#offcanvasNavbar"
+      aria-controls="offcanvasNavbar"
       aria-expanded="false"
-      aria-label="Toggle navigation"
+      aria-label="ToggleNavigation"
     >
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link px-6 text-black" href="service.html">服務方案</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link px-6 text-black ms-3" href="about.html"
-            >關於職旅</a
-          >
-        </li>
-        <li class="nav-item">
-          <a class="nav-link px-6 text-black ms-3" href="contact.html"
-            >聯絡我們</a
-          >
-        </li>
-      </ul>
+
+    <div
+      class="offcanvas offcanvas-top"
+      id="offcanvasNavbar"
+      tabindex="-1"
+      aria-labelledby="offcanvasNavbar"
+    >
+      <div class="offcanvas-header">
+        <button
+          type="button"
+          class="btn-close text-reset"
+          data-bs-dismiss="offcanvas"
+          aria-label="Close"
+        ></button>
+      </div>
+
+      <div class="offcanvas-body justify-content-center">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="service.html">服務方案</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link ms-lg-3" href="about.html">關於職旅</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link ms-lg-3" href="contact.html">聯絡我們</a>
+          </li>
+        </ul>
+      </div>
     </div>
   </div>
 </nav>
