修改：調整連結大小

--- a/layout/footer.ejs
+++ b/layout/footer.ejs
@@ -5,15 +5,13 @@
     >
       <div class="nav justify-content-center mb-2">
         <div class="d-flex">
-          <a href="service.html" class="nav-link fs-bm text-black">服務方案</a>
-          <a href="about.html" class="nav-link fs-bm text-black">關於職旅</a>
-          <a href="contact.html" class="nav-link fs-bm text-black">聯絡我們</a>
+          <a href="service.html" class="nav-link fs-bm">服務方案</a>
+          <a href="about.html" class="nav-link fs-bm">關於職旅</a>
+          <a href="contact.html" class="nav-link fs-bm">聯絡我們</a>
         </div>
         <div class="d-flex">
-          <a href="privacy.html" class="nav-link fs-bm text-black"
-            >隱私權政策</a
-          >
-          <a href="terms.html" class="nav-link fs-bm text-black">用戶條款</a>
+          <a href="privacy.html" class="nav-link fs-bm">隱私權政策</a>
+          <a href="terms.html" class="nav-link fs-bm">用戶條款</a>
         </div>
       </div>
       <small class="fs-bs text-natural-50 text-center">
