--- a/assets/scss/components/_form.scss
+++ b/assets/scss/components/_form.scss
@@ -12,3 +12,11 @@ legend {
     color: $black;
   }
 }
+
+.form-check-inline {
+  margin-right: 1rem;
+
+  @include media-breakpoint-up(xl) {
+    margin-right: 1.5rem;
+  }
+}
