新增：會員中心－預約紀錄

--- a/assets/scss/all.scss
+++ b/assets/scss/all.scss
@@ -17,6 +17,7 @@
 @import "./components/offcanvas";
 @import "./components/buttons";
 @import "./components/form";
+@import "./components/table";
 
 // customize - utils
 @import "./utils/helpers";
