--- a/layout/headerMember.ejs
+++ b/layout/headerMember.ejs
@@ -6,7 +6,7 @@
 
     <a
       class="text-decoration-none order-lg-2 d-flex align-items-center ms-auto"
-      href="#"
+      href="memberCenter.html"
     >
       <img
         src="../assets/images/00_navBar_avatar.png"
