--- a/assets/scss/utils/_helpers.scss
+++ b/assets/scss/utils/_helpers.scss
@@ -3,7 +3,7 @@
 //   outline: 1px solid green;
 // }
 
-.break-line {
+.text__break-line--sm-only {
   display: block;
 
   @include media-breakpoint-up(sm) {
@@ -11,7 +11,7 @@
   }
 }
 
-.col-lg-300 {
+.form__col--lg {
   @include media-breakpoint-up(lg) {
     min-width: 300px;
   }
